# digital-asset-protocol

./: .ammanrc.js  .gitignore  Cargo.toml  README.md  asset.fbs  bebop.json  build.rs  generate.sh  package.json  tsconfig.json
examples/identity/: config-overrides.js  package.json
examples/identity/src/: App.tsx  Wallet.tsx  WalletState.tsx  index.tsx  models.ts  react-app-env.d.ts
schemas/: schema.bop
src/: api.rs  blob.rs  entrypoint.rs  lib.rs  lifecycle.rs  module.rs
src/interfaces/: mod.rs
src/interfaces/asset/: cancel_sale.rs  create.rs  delegate.rs  delete.rs  freeze.rs  list_for_sale.rs  mod.rs  sell.rs  transfer.rs  update.rs
src/interfaces/identity/: create.rs  mod.rs
src/interfaces/nft/: create.rs
src/modules/: mod.rs  module.rs  ownership.rs  royalty.rs  signature.rs
src/state/: asset.rs  blob.rs  mod.rs  standard.rs
src/state/actions/: mod.rs
src/state/standards/: nft.rs
src/validation/: mod.rs
tests/: create.test.ts  smoke.test.ts
trashheap/moartrash/state/: mod.rs
trashheap/moartrash/state/standards/: mod.rs  nft.rs  nft_printable.rs
trashheap/poc/: creators.rs  governed.rs  ownership.rs  royalty.rs  supply.rs
trashheap/state/: mod.rs  module.rs  standard.rs
